Mise en forme (alpha)

--- a/index.html
+++ b/index.html
@@ -1,12 +1,26 @@
-PJE : Web of Things
+<!DOCTYPE html>
+<html>
+	<head>
+		<meta charset=utf-8 />
+		<title></title>
+		<link rel="stylesheet" type="text/css" media="screen" href="css/master.css" />
+		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
+    	<!--[if IE]>
+    		<script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+    	<![endif]-->
+	</head>
+	<body>
+		<h1>PJE : Web of Things</h1>
 
 
-Journal de bord de Rémy DEBUE et Théo PLOCKYN
+		<h2>Journal de bord de Rémy DEBUE et Théo PLOCKYN</h2>
 
-Seance 1 -- 16 Septembre 2015 :
+		<h3>Seance 1 -- 16 Septembre 2015 :</h3>
 
-- Découverte des composants
-- Lecture de docs sur Internet
-- Inscritption sur le site developer.mbed.org
-- Test du mbed avec le programme Hello World (allumage de LED en clignotant)
-- Creation d'un mini programme qui allume les lumières à la suite 
+		<p>- Découverte des composants
+		</br>- Lecture de docs sur Internet
+		</br>- Inscritption sur le site developer.mbed.org
+		</br>- Test du mbed avec le programme Hello World (allumage de LED en clignotant)
+		</br>- Creation d'un mini programme qui allume les lumières à la suite</p>
+	</body>
+</html>
