--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 		<h3>Seance 1 -- 16 Septembre 2015 :</h3>
 
 		<p>- Découverte des composants
-		</br>- Lecture de docs sur Internet
-		</br>- Inscritption sur le site developer.mbed.org
-		</br>- Test du mbed avec le programme Hello World (allumage de LED en clignotant)
-		</br>- Creation d'un mini programme qui allume les lumières à la suite</p>
+		<br/>- Lecture de docs sur Internet
+		<br/>- Inscritption sur le site developer.mbed.org
+		<br/>- Test du mbed avec le programme Hello World (allumage de LED en clignotant)
+		<br/>- Creation d'un mini programme qui allume les lumières à la suite</p>
 	</body>
 </html>
