ajout de presentation

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
 		<h1>PJE : Web of Things</h1>
 
 
-		<h2>Journal de bord de Rémy DEBUE et Théo PLOCKYN</h2>
+		<h2>Journal de bord de 
+			<strong> Rémy DEBUE</strong>et</b>
+			<strong> Théo PLOCKYN</strong>
+		</h2>
 
 		<h3>Seance 1 -- 16 Septembre 2015 :</h3>
 
