--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
 		<h2>Journal de bord de 
-			<strong> Rémy DEBUE</strong>et</b>
+			<strong> Rémy DEBUE</strong> et
 			<strong> Théo PLOCKYN</strong>
 		</h2>
 
