Remarques de Théo

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset=utf-8 />
-		<title></title>
+		<title>Squier.io</title>
 		<link rel="stylesheet" type="text/css" media="screen" href="css/master.css" />
 		<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.3.2/jquery.min.js"></script>
     	<!--[if IE]>
@@ -19,11 +19,19 @@
 		</h2>
 
 		<h3>Seance 1 -- 16 Septembre 2015 :</h3>
+		<ul>
+			<li>- Découverte des composants</li>
+			<li>- Lecture de docs sur Internet</li>
+			<li>- Inscritption sur le site developer.mbed.org</li>
+			<li>- Test du mbed avec le programme Hello World (allumage de LED onboard en clignotant)</li>
+			<li>- Creation d'un mini programme qui allume les LEDs via les ports de la carte ( ici les ports PwmOut, p21 p22 et p23 )</li>
+		</ul>
 
-		<p>- Découverte des composants
-		<br/>- Lecture de docs sur Internet
-		<br/>- Inscritption sur le site developer.mbed.org
-		<br/>- Test du mbed avec le programme Hello World (allumage de LED en clignotant)
-		<br/>- Creation d'un mini programme qui allume les lumières à la suite</p>
+		<h2>Remarques de Théo</h2>
+		<p>Pour avoir déjà pratiqué un peu lors de mes stages de DUT et de L3, ça n'a pas été une découverte totale, par contre j'ai pu apprendre ( ou réapprendre ) le sens des LEDs, les codes couleurs des résistances, et découvrir le C++, ce qui n'a pas trop posé de souci pour le moment.
+		</p>
+
+		<h3>Liens utiles :</h3>
+		<p><a href="https://developer.mbed.org/users/screamer/code/mbed/file/667d61c9177b/PinNames.h">Pour trouver les pins à utiliser dans le code</a></p>
 	</body>
 </html>
