ajouts de remarques personelles

--- a/index.html
+++ b/index.html
@@ -30,6 +30,9 @@
 		<h2>Remarques de Théo</h2>
 		<p>Pour avoir déjà pratiqué un peu lors de mes stages de DUT et de L3, ça n'a pas été une découverte totale, par contre j'ai pu apprendre ( ou réapprendre ) le sens des LEDs, les codes couleurs des résistances, et découvrir le C++, ce qui n'a pas trop posé de souci pour le moment.
 		</p>
+		<h2>Remarques de Rémy</h2>
+		<p>Je ne connaissais pas vraiment les principes d'éléctricité (à part le classique pile,lampe etc ..) je trouve que la gestion d'un processeur peut être intéressante puisqu'elle offre de nombreuses fonctionalités plus ou moins faciles à aborder. 
+		</p>
 
 		<h3>Liens utiles :</h3>
 		<p><a href="https://developer.mbed.org/users/screamer/code/mbed/file/667d61c9177b/PinNames.h">Pour trouver les pins à utiliser dans le code</a></p>
