--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     	<![endif]-->
 	</head>
 	<body>
-		<h1 style='text-align=center;'>PJE : Web of Things</h1>
+		<h1 style='text-align:center;'>PJE : Web of Things</h1>
 
 
 		<h2>Journal de bord de 
