added useful link

--- a/index.html
+++ b/index.html
@@ -41,5 +41,6 @@
 
 		<h3>Liens utiles :</h3>
 		<p><a href="https://developer.mbed.org/users/screamer/code/mbed/file/667d61c9177b/PinNames.h">Pour trouver les pins à utiliser dans le code</a></p>
+		<p><a href="https://github.com/hauspie/rflpc"> Librairie utilisée pour mbedded LPC1768 </a></p> 
 	</body>
 </html>
