--- a/index.html
+++ b/index.html
@@ -26,11 +26,17 @@
 			<li>- Test du mbed avec le programme Hello World (allumage de LED onboard en clignotant)</li>
 			<li>- Creation d'un mini programme qui allume les LEDs via les ports de la carte ( ici les ports PwmOut, p21 p22 et p23 )</li>
 		</ul>
-		<h3>Seance 2 -- 23 Septembre 2015: </h3>
+		<h3>Seance 2 -- 23 Septembre 2015 : </h3>
 		<ul>
 			<li>- Installation des GNU Tools pour ARM embedded processors</li>
 			<li>- Première tentative avec Eclipse </li>
 			<li>- Utilisation des bibliothèques rfLPC fournies par Michaël Hauspie (Lille 1)</li> <br/>
+		</ul>
+		<h3>Seance 3 -- 30 Septembre 2015 : </h3>
+		<ul>
+			<li>- Creation d'un interrupteur simple avec les cables</li>
+			<li>- Allumer la LED puis l'éteindre </li>
+			<li>- Clignotement d'une LED à une frequence donnée + début d'interruptions</li> <br/>
 		</ul>
 		<h2>Remarques de Théo</h2>
 		<p>Pour avoir déjà pratiqué un peu lors de mes stages de DUT et de L3, ça n'a pas été une découverte totale, par contre j'ai pu apprendre ( ou réapprendre ) le sens des LEDs, les codes couleurs des résistances, et découvrir le C++, ce qui n'a pas trop posé de souci pour le moment.
