--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 		<ul>
 			<li>- Découverte des composants</li>
 			<li>- Lecture de docs sur Internet</li>
-			<li>- Inscritption sur le site developer.mbed.org</li>
+			<li>- Inscription sur le site developer.mbed.org</li>
 			<li>- Test du mbed avec le programme Hello World (allumage de LED onboard en clignotant)</li>
 			<li>- Creation d'un mini programme qui allume les LEDs via les ports de la carte ( ici les ports PwmOut, p21 p22 et p23 )</li>
 		</ul>
@@ -47,7 +47,7 @@
 		<ul>
 			<li>- Brancher le câble ethernet doit activer la LED </li>
 			<li>- La LED mbed s'allume au branchement</li>
-			<li>- </li> <br/>
+			<li>- Detecter sur interruption le branchement RJ45</li> <br/>
 		</ul>
 		<h2>Remarques de Théo</h2>
 		<p>Pour avoir déjà pratiqué un peu lors de mes stages de DUT et de L3, ça n'a pas été une découverte totale, par contre j'ai pu apprendre ( ou réapprendre ) le sens des LEDs, les codes couleurs des résistances, et découvrir le C++, ce qui n'a pas trop posé de souci pour le moment.
