--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 		<h2>Journal de bord de 
 			<strong> Rémy DEBUE</strong> et
 			<strong> Théo PLOCKYN</strong>
+			<strong> Aline cette putain de bonasse</strong>
 		</h2>
 
 		<h3>Seance 1 -- 16 Septembre 2015 :</h3>
@@ -48,6 +49,10 @@
 			<li>- Brancher le câble ethernet doit activer la LED </li>
 			<li>- La LED mbed s'allume au branchement</li>
 			<li>- Detecter sur interruption le branchement RJ45</li> <br/>
+		</ul>
+		<h3>Seance 6 -- 21 Octobre 2015 : </h3>
+		<ul>
+			<li>- Télechargement de Smews </li>
 		</ul>
 		<h2>Remarques de Théo</h2>
 		<p>Pour avoir déjà pratiqué un peu lors de mes stages de DUT et de L3, ça n'a pas été une découverte totale, par contre j'ai pu apprendre ( ou réapprendre ) le sens des LEDs, les codes couleurs des résistances, et découvrir le C++, ce qui n'a pas trop posé de souci pour le moment.
